--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="#adaptations"><li>Adaptations</li></a>
           </ul>
       </nav>
-      <img class="bg_header_pic" src="./images/background_pic_header.jpg" alt="">
+      <img class="bg_header_pic" src="./images/background_pic_header.png" alt="bg_header_pic">
       <img class="butterflyes_header_pic" src="./images/butterflyes.png" alt="butterflyes_pic">
       <!-- <img class="smudge_header_pic" src="./images/black_smudge.png" alt="black_smudge_pic"> -->
       <div class="quote">
