--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#adaptations"><li>Adaptations</li></a>
           </ul>
       </nav>
-      <img class="bg_header_pic" src="/tgcf_web_page_2_0/assets/background_pic_header-BRjNU4Gs.jpg" alt="">
+      <img class="bg_header_pic" src="/tgcf_web_page_2_0/assets/background_pic_header-BRjNU4Gs.png" alt="bg_header_pic">
       <img class="butterflyes_header_pic" src="/tgcf_web_page_2_0/assets/butterflyes-BYBFJfTK.png" alt="butterflyes_pic">
       <!-- <img class="smudge_header_pic" src="./images/black_smudge.png" alt="black_smudge_pic"> -->
       <div class="quote">
