--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <img class="butterflyes_header_pic" src="./images/butterflyes.png" alt="butterflyes_pic">
       <!-- <img class="smudge_header_pic" src="./images/black_smudge.png" alt="black_smudge_pic"> -->
       <div class="quote">
-        <h2 class="ff_elegant clr_main">„If you don't know how to live on, Then live on for me.“
+        <h2 class="ff_elegant">„If you don't know how to live on, Then live on for me.“
         That's where it all started</h2>
       </div>
     </div>
@@ -92,7 +92,7 @@
             </div>
           <div class="backstory_short_movie" id="backstory_short_movie">
             <button class="mute_button" id="muteButton">Unmute</button>
-            <video class="backstory_video_mp4" id="videomp4" src="./images/hualian_story_video.mp4" autoplay loop muted></video>
+            <video class="backstory_video_mp4" id="videomp4" src="./images/hualian_story_videox.mp4" autoplay loop muted></video>
             <button class="button" id="close" aria-controls="backstory_read_more backstory_short_movie backstory_describe">Go back</button>
           </div>
           <img class="butterfly_pic_backstory" src="./images/butterflyes.png" alt="buterflyes_pic">
