--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
           <div class="backstory_short_movie" id="backstory_short_movie">
             <button class="mute_button" id="muteButton">Unmute</button>
-            <video class="backstory_video_mp4" id="videomp4" src="/hualian_story_videox.mp4" autoplay loop muted></video>
+            <video class="backstory_video_mp4" id="videomp4" src="images/hualian_story_videox.mp4" autoplay loop muted></video>
             <button class="button" id="close" aria-controls="backstory_read_more backstory_short_movie backstory_describe">Go back</button>
           </div>
           <img class="butterfly_pic_backstory" src="./images/butterflyes.png" alt="buterflyes_pic">
